--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -5,7 +5,7 @@
 .tab {
   overflow: hidden;
   border: 1px solid #ccc;
-  background-color: #f1f1f1;
+  background-color: #403e3d;
 }
 
 /* Style the buttons that are used to open the tab content */
@@ -21,7 +21,7 @@
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-  background-color: #ddd;
+  background-color: #f8b100;
 }
 
 /* Create an active/current tablink class */
