--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -44,7 +44,7 @@
         
         <div class="tab">
           <button class="tablinks" onclick="openSection('Abstract')">Abstract</button>
-          <button class="tablinks" onclick="openSection('Past Work')">Past Work/button>
+          <button class="tablinks" onclick="openSection('Past Work')">Past Work</button>
           <button class="tablinks" onclick="openSection('Project Timeline')">Project Timeline</button>
           <button class="tablinks" onclick="openSection('Required Resources')">Required Resources</button>
           <button class="tablinks" onclick="openSection('Sources')">Sources</button>
