--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 .tab {
   overflow: hidden;
-  border: 1px solid #ccc;
+  border: 1px solid #f8b100;
   background-color: #403e3d;
 }
 
@@ -17,6 +17,7 @@
   cursor: pointer;
   padding: 14px 16px;
   transition: 0.3s;
+  color: white;
 }
 
 /* Change background color of buttons on hover */
@@ -26,7 +27,7 @@
 
 /* Create an active/current tablink class */
 .tab button.active {
-  background-color: #ccc;
+  background-color: #f8b100;
 }
 
 /* Style the tab content */
