--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -43,11 +43,11 @@
         
         
         <div class="tab">
-          <button class="tablinks" onclick="openSection('Abstract')">Abstract</button>
-          <button class="tablinks" onclick="openSection('Past Work')">Past Work</button>
-          <button class="tablinks" onclick="openSection('Project Timeline')">Project Timeline</button>
-          <button class="tablinks" onclick="openSection('Required Resources')">Required Resources</button>
-          <button class="tablinks" onclick="openSection('Sources')">Sources</button>
+          <button class="tablinks" onclick="openSection(event, 'Abstract')">Abstract</button>
+          <button class="tablinks" onclick="openSection(event, 'Past Work')">Past Work</button>
+          <button class="tablinks" onclick="openSection(event, 'Project Timeline')">Project Timeline</button>
+          <button class="tablinks" onclick="openSection(event, 'Required Resources')">Required Resources</button>
+          <button class="tablinks" onclick="openSection(event, 'Sources')">Sources</button>
         </div>
         
         <div id='Abstract'class="tabcontent">
@@ -61,9 +61,28 @@
 
     </div>
     
+    <script>
+      function openCity(evt, cityName) {
+        // Declare all variables
+        var i, tabcontent, tablinks;
 
-    
-    
+        // Get all elements with class="tabcontent" and hide them
+        tabcontent = document.getElementsByClassName("tabcontent");
+        for (i = 0; i < tabcontent.length; i++) {
+          tabcontent[i].style.display = "none";
+        }
+
+        // Get all elements with class="tablinks" and remove the class "active"
+        tablinks = document.getElementsByClassName("tablinks");
+        for (i = 0; i < tablinks.length; i++) {
+          tablinks[i].className = tablinks[i].className.replace(" active", "");
+        }
+
+        // Show the current tab, and add an "active" class to the button that opened the tab
+        document.getElementById(cityName).style.display = "block";
+        evt.currentTarget.className += " active";
+      } 
+    </script>
     
     {% if site.google_analytics %}
       <script>
