--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -62,7 +62,7 @@
     </div>
     
     <script>
-      function openCity(evt, cityName) {
+      function openSection(evt, cityName) {
         // Declare all variables
         var i, tabcontent, tablinks;
 
