--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -4,8 +4,9 @@
 @import "{{ site.theme }}";
 .tab {
   overflow: hidden;
-  border: 1px solid #f8b100;
+  border: 1px solid #1e1d1d;
   background-color: #403e3d;
+  border-radius: 3px;
 }
 
 /* Style the buttons that are used to open the tab content */
@@ -34,6 +35,6 @@
 .tabcontent {
   display: none;
   padding: 6px 12px;
-  border: 1px solid #ccc;
+  border: 1px solid #1e1d1d;
   border-top: none;
 } 
