--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -38,3 +38,13 @@
   border: 1px solid #1e1d1d;
   border-top: none;
 } 
+
+.tabcontent {
+  animation: fadeEffect .3s; /* Fading effect takes 1 second */
+}
+
+/* Go from zero to full opacity */
+@keyframes fadeEffect {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
