--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -47,6 +47,7 @@
           <button class="tablinks" onclick="openSection(event, 'Past Work')">Past Work</button>
           <button class="tablinks" onclick="openSection(event, 'Project Timeline')">Project Timeline</button>
           <button class="tablinks" onclick="openSection(event, 'Required Resources')">Required Resources</button>
+          <button class="tablinks" onclick="openSection(event, 'Division of Labor')">Division of Labor</button>
           <button class="tablinks" onclick="openSection(event, 'Sources')">Sources</button>
         </div>
 
@@ -61,7 +62,7 @@
         </div>
 
         <div id='Project Timeline' class="tabcontent">
-          <h3>Past Work to Current Solution</h3>
+          <h3>Project Timeline</h3>
           <ul>
             <li>Week 5 - Learn how to use earables and wristband</li>
             <li>Week 6 - Implement gesture recognition for earables and heart rate sensing for wristband</li>
@@ -71,7 +72,10 @@
             <li>Week 10 - Debug final project, work on final presentation</li>
           </ul>
         </div>
-        
+        <div id='Division of Labor' class="tabcontent">
+          <h3>Division of Labor</h3>
+          <p>For now, we plan on splitting the work evenly. Once we get the resources, we will have a better idea on how the work will be divided. Initially, one person might focus on the earables, while the other person will be more responsible for the wristband.</p>
+        </div> 
         <div id='Required Resources' class="tabcontent">
           <h3>Required Resources</h3>
           <ul>
