--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -71,11 +71,14 @@
             <li>Week 9 - Get the whole system working together</li>
             <li>Week 10 - Debug final project, work on final presentation</li>
           </ul>
+          <p>Expected deliverables: Earables to detect head gestures, wristband to detect heart rate, application of wearables to control functions on the phone</p>
         </div>
+        
         <div id='Division of Labor' class="tabcontent">
           <h3>Division of Labor</h3>
           <p>For now, we plan on splitting the work evenly. Once we get the resources, we will have a better idea on how the work will be divided. Initially, one person might focus on the earables, while the other person will be more responsible for the wristband.</p>
         </div> 
+        
         <div id='Required Resources' class="tabcontent">
           <h3>Required Resources</h3>
           <ul>
