--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -63,6 +63,8 @@
         </div>
 
         <div id='Project Timeline' class="tabcontent">
+          <h3>Objective</h3>
+          <p> To build an interconnected system of phones and wearables that can reduce distractions on the road.</p>
           <h3>Project Timeline</h3>
           <ul>
             <li>Week 5 - Learn how to use earables and wristband</li>
@@ -71,6 +73,12 @@
             <li>Week 8 - Make the phone interact with apps such as Spotify and Google Maps</li>
             <li>Week 9 - Get the whole system working together</li>
             <li>Week 10 - Debug final project, work on final presentation</li>
+          </ul>
+          <h3>Major Milestones</h3>
+          <ul>
+            <li>By week 7, we should be able to extract all of the useful information from the sensors and be able to manage the data in Android Studios. All pattern detection systems for the head movements and heart rate should be implemented as well.
+            <li>By week 9 before Thanksgiving, the app should be in working condition. It could still have minor bugs. However, the user interface and alerts need to be completed at this time.
+            <li>By the day of the final presentation, all of the features should be implemented and the app should be finalized.</li> 
           </ul>
         </div>
         <div id='Deliverables' class="tabcontent">
@@ -83,14 +91,17 @@
         </div>
         <div id='Division of Labor' class="tabcontent">
           <h3>Division of Labor</h3>
-          <p>For now, we plan on splitting the work evenly. Once we get the resources, we will have a better idea on how the work will be divided. Initially, one person might focus on the earables, while the other person will be more responsible for the wristband.</p>
+          <ul>
+            <li>Eric Sato: For the first part, he will work on extracting the useful information from the wrist sensors and creating some type of pattern recognition to detect drowsiness. For the app, he will be involved in the detection system for drowsiness. He will also work on creating the alternate path when the person gets tired.</li>
+            <li>Daniel Fong: For the first part, he will work on understanding the earables and extracting the data to the Android phones. When it comes to the app, he will be working on the interface to accept and decline information using the earables.</li>
+          </ul>
         </div> 
         
         <div id='Required Resources' class="tabcontent">
           <h3>Required Resources</h3>
           <ul>
             <li>Earables (currently have one pair)</li>
-            <li>Wearable wristband to detect heart rate (currently have the ones from the lab)</li>
+            <li>Wrist Sensor (currently have the ones from the lab)</li>
             <li>Android phone (currently borrowing the Nexus 5 for Eric Sato who does not have an Android)</li>
           </ul>
         </div> 
