--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -116,9 +116,10 @@
               <li>Consumer Reports, “Technology That Can Reduce Driving Distractions and Their Dangers,” Consumer Reports, November 2017. https://www.consumerreports.org/car-safety/technology-that-can-reduce-driving-distractions-dangers-car-safety-features/.</li>
               <li>D. Lee, S. Oh, S. Heo and M. Hahn, "Drowsy Driving Detection Based on the Driver's Head Movement using Infrared Sensors," 2008 Second International Symposium on Universal Communication, Osaka, 2008, pp. 231-236.</li>
               <li>A. Sahayadhas, K. Sundaraj and M. Murugappan, “Detecting Driver Drowsiness Based on Sensors: A Review,” Sensors, 2012, pp. 16937-16953.</li>
-              <li>Hong Kong Baptist University, "Smartphone app detects and alerts sleepy drivers." ScienceDaily, ScienceDaily, June 2017. <www.sciencedaily.com/releases/2017/06/170616121811.htm>.</li>
+              <li>Hong Kong Baptist University, "Smartphone app detects and alerts sleepy drivers," ScienceDaily, ScienceDaily, June 2017. <www.sciencedaily.com/releases/2017/06/170616121811.htm>.</li>
               <li>J. Vicente, P. Laguna, A. Bartra, and et al., “Drowsiness detection using heart rate variability,” Medical & Biological Engineering & Computing, 2016, vol. 54 pp. 927-927.</li>
               <li>S. Jo, J. Kim, and D. Kim, “Heart Rate Change While Drowsy Driving,” Journal of Korean Medical Science, 2019.</li>
+              <li>J.R. Terven, J. Salas, and B. Raducanu, "Robust Head Gestures Recognition for Assistive Technology," Pattern Recognition. MCPR 2014. Lecture Notes in Computer Science, vol 8495.
           </ol>
         </div> 
         
