--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -44,7 +44,7 @@
         
         <div class="tab">
           <button class="tablinks" onclick="openSection(event, 'Abstract')" id="defaultOpen">Abstract</button>
-          <button class="tablinks" onclick="openSection(event, 'Past Work')">Past Work</button>
+          <button class="tablinks" onclick="openSection(event, 'Background')">Background</button>
           <button class="tablinks" onclick="openSection(event, 'Project Timeline')">Project Timeline</button>
           <button class="tablinks" onclick="openSection(event, 'Required Resources')">Required Resources</button>
           <button class="tablinks" onclick="openSection(event, 'Division of Labor')">Division of Labor</button>
@@ -59,9 +59,10 @@
           <p>https://www.sandlawllc.com/drowsy-driving-accidents/</p>
         </div>
         
-        <div id='Past Work' class="tabcontent">
+        <div id='Background' class="tabcontent">
           <h3>Past Work to Current Solution</h3>
           <p>There has been a lot of prior technology regarding distracted and drowsy driving. For distracted driving, there are several apps that can be used to block calls and incoming texts [3]. However, drivers might not want to use these apps in case the call is important. If drivers are still going to accept calls or change their songs while driving, the next best possible solution is to use a technology that can minimize these distractions. Earables can provide a solution to do so by allowing the driver to make these decisions without having to look directly at their phone or press a button. By using simple head gestures, the driver can perform these tasks with less risk. In the case of drowsy driving, many of these solutions require cameras or sensors integrated within the car. For example, one solution uses IR sensors embedded in the driver’s headrest to track their head position and determine if the driver is drowsy [4]. Other solutions for drowsy driving include using cameras to look at the driver’s blink rate or using the steering wheel to detect the driver’s movements [5]. This, however, would require expensive equipment and can be cumbersome to use. In one case, a research group from Hong Kong Baptist University uses the smartphone’s camera instead to look for signs of drowsiness. The only catch is that the smartphone’s camera must be in direct view of the driver’s face, which is usually inconvenient for the driver [6]. Our method will take advantage of analyzing a person’s head movements using the earables. Additionally, there have been several studies that show drowsiness is linked to changes in the heart rate [7][8]. Therefore, we will try to incorporate heart rate variability (HRV) as one of the inputs as well. This will be done using a wearable wristband to monitor the person’s heart rate. Furthermore, most past solutions use lights and sounds to notify the driver of their drowsy state. However, this might do little to get the driver off the road. With our solution, we hope to guide the driver to a safe location within a short amount of time. This will be done by providing the driver with the option to redirect their route to a nearby coffee shop. The choice is still up to the driver, but at least it provides a convenient option without the hassle of the driver having to do it themselves.</p>
+          <p>Since most work on drowsy driving has been done using cameras, the references used mainly focus on the techniques behind the detection. For example, one group used cameras on sunglasses to detect specific head gestures. Although the implementation may be different, we can still use their model for our earables solution. The Hidden Markov Model proposed in the paper seems like a reasonable way to predict and map out different head gestures [9]. In many studies, there is also a lot of data collection prior to the implementation of their solutions. We also plan to do the same by testing the earables and wrist sensors in a variety of conditions. Hopefully, we can also get a small subset of people to train the data and reach better results. </p>
         </div>
 
         <div id='Project Timeline' class="tabcontent">
