--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -55,7 +55,7 @@
         <div id='Abstract' class="tabcontent">
           <h3>Abstract</h3>
           <p>Each year, hundreds of people fall victim to unsafe driving. In 2017 alone, distracted driving led to the deaths of 3166 people [1]. On the other hand, drowsy driving caused up to 800 deaths in a single year [2]. These statistics show an urgent need to improve driver safety. Although newer cars such as Teslas do have features to detect drowsiness using cameras and in-car sensors, this type of technology does not exist in older models, and as such is mostly inaccessible to the vast majority of the population, especially those that are financially unprivileged. Our solution is to use earables, a wearable wristband, and the user’s phone to cost effectively create safer driving practices in any car model. While driving, simple gestures such as shaking or tilting the head can be used to decline or accept calls, or to change songs on Spotify. These small changes can help to reduce distracted driving by keeping the driver focused on the road rather than on their phones. For drowsiness, the earables can be used to detect patterns of fatigue, while the wristband can keep track of their heart rate. If both inputs indicate drowsiness, the phone can then ask if the user wants to stop at a nearby coffee shop/rest area. The user can either accept or decline the new route by shaking his or her head. Hopefully, this solution will improve driver safety while being accessible to all drivers.</p>
-          <img src="https://github.com/dfong1234/ECE202A-Project/tree/master/docs/assets/drowsy.jpg" alt="Drowsy Driver">
+          <img src="/docs/assets/drowsy.jpg" alt="Drowsy Driver">
           <p>https://www.sandlawllc.com/drowsy-driving-accidents/</p>
         </div>
         
