--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -66,7 +66,7 @@
 
         <div id='Project Timeline' class="tabcontent">
           <h3>Objective</h3>
-          <p> To build an interconnected system of phones and wearables that can reduce distractions on the road.</p>
+          <p> To build an interconnected system of phones and wearables that can reduce distractions and drowsiness on the road.</p>
           <h3>Project Timeline</h3>
           <ul>
             <li>Week 5 - Learn how to use earables and wristband</li>
