--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -46,6 +46,7 @@
           <button class="tablinks" onclick="openSection(event, 'Abstract')" id="defaultOpen">Abstract</button>
           <button class="tablinks" onclick="openSection(event, 'Background')">Background</button>
           <button class="tablinks" onclick="openSection(event, 'Project Timeline')">Project Timeline</button>
+          <button class="tablinks" onclick="openSection(event, 'Technical Approach')">Technical Approach</button>
           <button class="tablinks" onclick="openSection(event, 'Required Resources')">Required Resources</button>
           <button class="tablinks" onclick="openSection(event, 'Division of Labor')">Division of Labor</button>
           <button class="tablinks" onclick="openSection(event, 'Deliverables')">Deliverables</button>
@@ -82,6 +83,10 @@
             <li>By week 9 before Thanksgiving, the app should be in working condition. It could still have minor bugs. However, the user interface and alerts need to be completed at this time.
             <li>By the day of the final presentation, all of the features should be implemented and the app should be finalized.</li> 
           </ul>
+        </div>
+        <div id='Technical Approach' class="tabcontent">
+          <h3>Technical Approach</h3>
+          <p>We will utilize the earables to detect head position. Then, we will collect data on drowsy drivers and use a pattern recognition algorithm to determine if the user is drowsy.</p>
         </div>
         <div id='Deliverables' class="tabcontent">
           <h3>Deliverables</h3>
