--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -86,7 +86,7 @@
         </div>
         <div id='Technical Approach' class="tabcontent">
           <h3>Technical Approach</h3>
-          <p>We will utilize the earables to detect head position. Then, we will collect data on drowsy drivers and use a pattern recognition algorithm to determine if the user is drowsy.</p>
+          <embed src="Technical Approach.txt">
         </div>
         <div id='Deliverables' class="tabcontent">
           <h3>Deliverables</h3>
