--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -86,7 +86,7 @@
         </div>
         <div id='Technical Approach' class="tabcontent">
           <h3>Technical Approach</h3>
-          <embed src="Technical Approach.txt">
+          <embed src="/_layouts/Technical Approach.txt">
         </div>
         <div id='Deliverables' class="tabcontent">
           <h3>Deliverables</h3>
