--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -86,7 +86,7 @@
         </div>
         <div id='Technical Approach' class="tabcontent">
           <h3>Technical Approach</h3>
-          <embed src="/_layouts/Technical_Approach.txt">
+          <p>We will utilize the earables to detect head position. Then, we will collect data on drowsy drivers and use a pattern recognition algorithm to determine if the user is drowsy. Once this is further verified experimentally in a safe environment to an acceptable degree of accuracy, it will be combined with the PPG monitor to further improve accuracy. Once this is once again verified, it will be integrated into an app that will allow functionality for controlling an Android phone.</p>
         </div>
         <div id='Deliverables' class="tabcontent">
           <h3>Deliverables</h3>
