--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -46,7 +46,7 @@
           <button class="tablinks" onclick="openSection(event, 'Abstract')" id="defaultOpen">Abstract</button>
           <button class="tablinks" onclick="openSection(event, 'Background')">Background</button>
           <button class="tablinks" onclick="openSection(event, 'Project Timeline')">Project Timeline</button>
-          <button class="tablinks" onclick="openSection(event, 'Technical Approach')">Technical Approach</button>
+          <button class="tablinks" onclick="openSection(event, 'Methodology')">Methodology</button>
           <button class="tablinks" onclick="openSection(event, 'Required Resources')">Required Resources</button>
           <button class="tablinks" onclick="openSection(event, 'Division of Labor')">Division of Labor</button>
           <button class="tablinks" onclick="openSection(event, 'Deliverables')">Deliverables</button>
