--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -94,6 +94,8 @@
             <li>Wrist Sensor: The wrist sensor will be used to detect heart rate, specifically heart rate variablility (HRV). Once this is working, the wristband should notify the user if there is a considerable drop in HRV. This would indicate that the user is drowsy.
             <li>Phone App: The phone app will be used to take information from the user and respond accordingly. It will only activate if the phone detects that the car is actually moving. For drowsy driving, it will take inputs from both the earables and the wrist sensor to determine whether or not the driver is drowsy. If so, the driver will be given the option to take an alternate shorter route to a nearby coffee shop/rest area. This message will only appear once every 30 minutes. The driver can accept or decline using the earables. Other features for the phone app include using the earables to accept/decline calls (high priority) and being able to change songs on Spotify (lower priority).
           </ul>
+          <h3>Success Metrics</h3>
+          <p>A completed app that can at least detect drowsiness and access Google maps will be our baseline goals. Stretch goals include implementing Spotify functionality, as well as possibly stress detection if physically feasible.</p>
         </div>
         <div id='Division of Labor' class="tabcontent">
           <h3>Division of Labor</h3>
